# slip

./: .gitignore  Cargo.toml  LICENSE  README.md
.githooks/: pre-commit  pre-commit-user  pre-push
.github/workflows/: ci.yml
crates/slip-cli/: Cargo.toml
crates/slip-cli/src/: main.rs
crates/slip-core/: Cargo.toml
crates/slip-core/src/: api.rs  auth.rs  caddy.rs  config.rs  deploy.rs  docker.rs  error.rs  health.rs  lib.rs  manifest.rs  merge.rs  podman.rs  preview.rs  repo_config.rs  runtime.rs  secrets.rs  state.rs  validate.rs
crates/slipd/: Cargo.toml
crates/slipd/src/: main.rs
docs/: design-v2-pod-deploys.md  prd.md  slip-design.md  tech-spec.md
scripts/: setup-hooks.sh  smoke-test.sh
tests/fixtures/: smoke-test-app.toml
tests/fixtures/health-app/: Dockerfile  README.md
