[package]
name = "slip-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared library for slip — config, types, Docker/Caddy clients"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
bollard = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
regex = { workspace = true }
tar = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tower = { workspace = true }
tempfile = "3"
