[package]
name = "slipd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "slip deploy daemon — receives webhooks, manages zero-downtime container deploys"

[[bin]]
name = "slipd"
path = "src/main.rs"

[dependencies]
slip-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
